--- a/src/VladChange/MainBundle/Resources/config/routing.yml
+++ b/src/VladChange/MainBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 vlad_change_main_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: VladChangeMainBundle:Default:index }
+   path: /
+   defaults: { _controller: VladChangeMainBundle:Default:index }
 
 vlad_change_view_profile:
     path:     /profile/{id}
