--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,11 +1,12 @@
-vlad_change_store:
-    resource: "@VladChangeStoreBundle/Controller/"
-    type:     annotation
-    prefix:   /
+# vlad_change_store:
+#     resource: "@VladChangeStoreBundle/Controller/"
+#     type:     annotation
+#     prefix:   /
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
 vlad_change_main:
     resource: "@VladChangeMainBundle/Resources/config/routing.yml"
     prefix:   /
 
-fos_user:
-    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
