--- a/src/VladChange/MainBundle/Resources/config/routing.yml
+++ b/src/VladChange/MainBundle/Resources/config/routing.yml
@@ -9,7 +9,11 @@ vlad_change_view_profile:
         id: \d+
 
 vlad_change_add_project:
-    path: /add_project
+    path: /add_project/
+    defaults: { _controller: VladChangeMainBundle:Default:addProject }
+
+vlad_change_add_project_from_map:
+    path: /add_project/?lat={x}&lon={y}
     defaults: { _controller: VladChangeMainBundle:Default:addProject }
 
 vlad_change_addPlacemark:
