--- a/src/VladChange/MainBundle/Resources/config/routing.yml
+++ b/src/VladChange/MainBundle/Resources/config/routing.yml
@@ -8,6 +8,12 @@ vlad_change_view_profile:
     requirements:
         id: \d+
 
+vlad_change_edit_project:
+    path: /edit_project/{$id}
+    defaults: { _controller: VladChangeMainBundle:Default:editProject }
+    requirements:
+        id: \d+
+
 vlad_change_add_project:
     path: /add_project/
     defaults: { _controller: VladChangeMainBundle:Default:addProject }
