--- a/src/VladChange/MainBundle/Resources/config/routing.yml
+++ b/src/VladChange/MainBundle/Resources/config/routing.yml
@@ -36,6 +36,10 @@ vlad_change_add_project_from_map:
     path: /add_project/?lat={x}&lon={y}
     defaults: { _controller: VladChangeMainBundle:Default:addProject }
 
-# vlad_change_upload_image:
-#     path:     /upload
-#     defaults: { _controller: VladChangeMainBundle:Default:uploadImage }
+vlad_change_upload_image:
+    path:     /upload
+    defaults: { _controller: VladChangeMainBundle:Default:uploadImage }
+
+vlad_change_get_image:
+    path:     /img/{id}
+    defaults: { _controller: VladChangeMainBundle:Default:getImage }
