--- a/src/VladChange/MainBundle/Resources/config/api_routing.yml
+++ b/src/VladChange/MainBundle/Resources/config/api_routing.yml
@@ -8,6 +8,10 @@ vlad_change_get_placemarks:
    path:     /getAllPlacemark
    defaults: { _controller: VladChangeMainBundle:Api:getAllPlacemark }
 
+vlad_change_add_comment:
+   path:     /addComment
+   defaults: { _controller: VladChangeMainBundle:Api:addComment }
+
 vlad_change_add_like:
    path:     /updateLike/id={id}&t={type}&a={action}
    defaults: { _controller: VladChangeMainBundle:Api:addLike }
